<resources>
    <string name="app_name">Farrier Journal</string>
    <string name="new_horse">New Horse</string>
    <string name="new_customer">New Customer</string>
    <string name="new_entry">New Entry</string>
    <string name="plus_new">+ New</string>
    <string name="phone">Phone</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="main_menu">Main Menu</string>
    <string name="horse_name">Horse Name</string>
    <string name="birth_year">Birth Year</string>
    <string name="id_number">ID Number</string>
    <string name="animal_type">Animal Type</string>
    <string name="gender">Gender</string>
    <string name="street">Street</string>
    <string name="post_code">Post Code</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="notes">notes</string>
    <string name="show_horses">Show Horses</string>
    <string name="all_horses">All Horses</string>
    <string name="Fill_in_birth_year">Fill in birth year, only numbers</string>
    <string name="fill_in_name">Fill in name</string>
    <string name="fill_in_identification">Fill in identification</string>
    <string name="show_customers">Show Customers</string>
    <string name="all_customers">All Customers</string>
    <string name="fill_in_firstName">Fill in first name</string>
    <string name="Fill_in_lastName">Fill in last name</string>
    <string name="fill_in_streetAddress">Fill in street address</string>
    <string name="fill_in_postCode">Fill in post code</string>
    <string name="fill_in_city">Fill in city</string>
    <string name="fill_in_phone">Fill in phone, only digits and hyphen allowed</string>
    <string name="has_been_saved"> has been saved!</string>
    <string name="search_customer">Search customer...</string>

    <string-array name="genders">
        <item>Mare</item>
        <item>Stallion</item>
        <item>Gelding</item>
    </string-array>

    <string-array name="animal_types">
        <item>Horse</item>
        <item>Donkey</item>
        <item>Mule</item>
        <item>Other</item>
    </string-array>

</resources>