<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewCustomerFragment">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/tvTitle"
        android:text="@string/new_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCustomer"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnNewCustomer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnNewCustomer"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:padding="16dp"
        android:text="+ New"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etCustomer"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Spinner
        android:id="@+id/spHorse"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnNewHorse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCustomer" />

    <Button
        android:id="@+id/btnNewHorse"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:padding="16dp"
        android:text="@string/plus_new"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spHorse"
        app:layout_constraintTop_toBottomOf="@+id/btnNewCustomer" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spHorse" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@+id/etDate"
        app:layout_constraintTop_toBottomOf="@+id/spHorse" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/etDate"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Write notes here..."
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTime" />

</androidx.constraintlayout.widget.ConstraintLayout>